css/style.css
body {
  font-family: 'Noto Sans', sans-serif;
}

/* Make content area fill the entire browser window */
html,
.fullscreen {
  display: flex;
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

/* Center the content in the browser window */
.container {
  margin: auto;
  max-width: 479px;
}

.title {
  font-size: 3rem;
}

.scrolling-wrapper {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
}

  .card {
    flex: 0 0 auto;
    width: 160px;
    margin-right: 16px; 
    border: 1px solid #f2f2f2;
    padding: 8px;
  }

.scrolling-wrapper {
  -webkit-overflow-scrolling: touch;
}

.scrolling-wrapper::-webkit-scrollbar {
  display: none;
}

.card > img {
	width: 160px;
	height: 96px;
}

.card > h4 {
	margin: 8px 0;
	padding: 0;
	font-size: 0.8em; 
}

footer {
	padding: 32px 0; 
}

